Name:           CouchDB
Version:        0.10.1
Cabal-Version:	>= 1.2.4
Copyright:      Copyright (c) 2008-2009 Arjun Guha and Brendan Hickey
License:        BSD3
License-file:   LICENSE
Author:         Arjun Guha, Brendan Hickey
Maintainer:     Arjun Guha <arjun@cs.brown.edu>
Homepage:       http://github.com/arjunguha/haskell-couchdb/
Stability:      provisional
Category:       Database
Build-Type:     Custom
Synopsis:       CouchDB interface
Extra-Source-Files: README
Description:

 
Library
  Hs-Source-Dirs:
    src
  Build-Depends:
    base >= 4 && < 5, mtl, containers, network, HTTP>=4000.0.4, json>=0.4.3
  ghc-options:
    -fwarn-incomplete-patterns
  Extensions:     
  Exposed-Modules:
    Database.CouchDB Database.CouchDB.JSON
  Other-Modules:
    Database.CouchDB.HTTP Database.CouchDB.Unsafe
