Name:           CouchDB
Version:        1.2.1
Cabal-Version:	>= 1.8
Copyright:      Copyright (c) 2008-2012.
License:        BSD3
License-file:   LICENSE
Author:         see the AUTHORS file
Maintainer:     
Homepage:       http://github.com/arjunguha/haskell-couchdb/
Stability:      provisional
Category:       Database
Build-Type:     Simple
Synopsis:       CouchDB interface
Extra-Source-Files: README LICENSE AUTHORS CHANGES

Description:
   An interface to CouchDB servers.

flag network-uri
   description: Get Network.URI from the new network-uri package ? A compatibility flag, cabal will toggle it as needed.
   default: True

Test-Suite test-couchdb
  Hs-Source-Dirs: src
  Type: exitcode-stdio-1.0
  Main-Is: Tests.hs
  Build-Depends:
    base >= 4 && < 5, mtl, containers, HTTP>=4000.0.4, json>=0.4.3, utf8-string >= 0.3.6 && <= 1.1, HUnit, bytestring
  if flag(network-uri)
    build-depends: network >= 2.6, network-uri >= 2.6
  else
    build-depends: network < 2.6, network-uri < 2.6
  Extensions:
    FlexibleInstances
  ghc-options:
    -fwarn-incomplete-patterns
 
Library
  Hs-Source-Dirs: src
  Build-Depends:
    base >= 4 && < 5, mtl, containers, network, network-uri, HTTP>=4000.0.4, json>=0.4.3, utf8-string >= 0.3.6 && <= 1.1, bytestring
  if flag(network-uri)
    build-depends: network >= 2.6, network-uri >= 2.6
  else
    build-depends: network < 2.6, network-uri < 2.6
  ghc-options:
    -fwarn-incomplete-patterns
  Extensions:     
  Exposed-Modules:
    Database.CouchDB Database.CouchDB.JSON
  Other-Modules:
    Database.CouchDB.HTTP Database.CouchDB.Unsafe
